@@ -30,6 +30,7 @@ export(status)
 importFrom(batchtools,batchExport)
 importFrom(batchtools,batchMap)
 importFrom(batchtools,clearRegistry)
+importFrom(batchtools,findConfFile)
 importFrom(batchtools,findTemplateFile)
 importFrom(batchtools,getErrorMessages)
 importFrom(batchtools,getLog)
